--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 
   <h2>5. Contact Us</h2>
   <p>If you have any questions about this policy, please contact us at:  
-  <strong>Contact@kapair.instute</strong></p>
+  <strong>Contact@kapair.institute</strong></p>
 </body>
 </html>
